--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx mix watch",
+    "watch": "shopify theme dev",
     "zip": "node src/tasks/zip.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "archiver": "^6.0.1"
+    "@tailwindcss/typography": "^0.5.10",
+    "archiver": "^6.0.1",
+    "laravel-mix": "^6.0.49",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.67.0",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3"
   }
 }
